[TBR-10775] modal background fits entire screen correctly on register page
Summary: [TBR-10775] small gap removed at 1920px

Test Plan: Review

Reviewers: mantas.buga

Reviewed By: mantas.buga

Differential Revision: https://ph.tonybet.com/D17678

--- a/styles/bnl/stylesheets/scss/_custom.scss
+++ b/styles/bnl/stylesheets/scss/_custom.scss
@@ -6,6 +6,13 @@
 	-webkit-overflow-scrolling: touch;
 }
 
+html {
+  @media(min-width: 1960px) {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+}
+
 body {
     max-width: 1920px;
     padding: 0 80px;
@@ -18,7 +25,6 @@ body {
         padding: 0 20px !important;
     }
     &.modal-open-windows {
-      transform: translateX(-8px);
       padding-right: 80px !important;
       @media only screen and (max-width: 1920px) {
         margin: 0;
@@ -355,6 +361,10 @@ a:hover {
   box-shadow: 0 0px 12px rgba($white, 0.2);
   @include media-breakpoint-down(sm) {
     flex-direction: column;
+  }
+  @include media-breakpoint-up(xxxl) {
+    position: sticky;
+    margin: 0 -80px;
   }
   &__icon {
     font-size: 25px;
